# baes_berk_20251103

./: .env.example  .gitignore  README.md  config.yaml  reconcile_usage.sh  requirements.txt  run.sh  setup.sh
analysis/: statistical_report_full.md
analysis/figures/: box_plot_api_calls.md  box_plot_cached_tokens.md  box_plot_execution_time.md  box_plot_tokens_in.md  box_plot_tokens_out.md  box_plot_tokens_total.md  box_plot_total_cost_usd.md  effect_size_panel_20251103_084830.md  effect_size_panel_20251103_084831.md  efficiency_execution_time_vs_total_cost_usd.md  forest_plot_api_calls.md  forest_plot_cached_tokens.md  forest_plot_execution_time.md  forest_plot_tokens_in.md  forest_plot_tokens_out.md  forest_plot_tokens_total.md  forest_plot_total_cost_usd.md  outlier_baes_cached_tokens.md  outlier_baes_execution_time.md  (+45 more)
runs/: manifest.json
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_001/generated_artifacts/path/to/project/: pyproject.toml
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_001/generated_artifacts/path/to/project/docs/: deployment.md
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_001/generated_artifacts/path/to/project/src/models/: student.py
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_001/generated_artifacts/path/to/project/src/utils/: logger.py
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_001/generated_artifacts/path/to/project/tests/api/: test_student.py
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_005/generated_artifacts/specs/001-baes-experiment/src/: README.md  pyproject.toml
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_005/generated_artifacts/specs/001-baes-experiment/src/config/: .env.example
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_005/generated_artifacts/specs/001-baes-experiment/src/migrations/versions/: <timestamp>_create_teachers_table.py
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_005/generated_artifacts/specs/001-baes-experiment/src/src/: api.py  models.py
runs/ghspec/0396f6bc-0251-4ce8-aa2e-40b81a0aee0e/sprint_005/generated_artifacts/specs/001-baes-experiment/src/tests/: test_teachers.py
runs/ghspec/1be13722-80fb-40fb-90b3-7e076d4fb588/sprint_001/generated_artifacts/specs/001-baes-experiment/src/student_entity_management/: .env.example  pyproject.toml
runs/ghspec/1be13722-80fb-40fb-90b3-7e076d4fb588/sprint_001/generated_artifacts/specs/001-baes-experiment/src/student_entity_management/src/api/: student.py
runs/ghspec/1be13722-80fb-40fb-90b3-7e076d4fb588/sprint_001/generated_artifacts/specs/001-baes-experiment/src/student_entity_management/src/services/: student_service.py
runs/ghspec/1be13722-80fb-40fb-90b3-7e076d4fb588/sprint_001/generated_artifacts/specs/001-baes-experiment/src/student_entity_management/tests/api/: test_student.py
runs/ghspec/1be13722-80fb-40fb-90b3-7e076d4fb588/sprint_001/generated_artifacts/specs/001-baes-experiment/src/student_entity_management/tests/services/: test_student_service.py
runs/ghspec/2bb33389-e566-4cde-92f3-863291204d0e/sprint_002/generated_artifacts/specs/001-baes-experiment/src/: README.md  pyproject.toml
runs/ghspec/2bb33389-e566-4cde-92f3-863291204d0e/sprint_002/generated_artifacts/specs/001-baes-experiment/src/migrations/versions/: xxxx_add_email_to_student.py
runs/ghspec/2bb33389-e566-4cde-92f3-863291204d0e/sprint_002/generated_artifacts/specs/001-baes-experiment/src/src/api/: student.py
runs/ghspec/2bb33389-e566-4cde-92f3-863291204d0e/sprint_002/generated_artifacts/specs/001-baes-experiment/src/src/api/docs/: student_api.md
runs/ghspec/2bb33389-e566-4cde-92f3-863291204d0e/sprint_002/generated_artifacts/specs/001-baes-experiment/src/tests/: test_integration.py
runs/ghspec/831f4202-dd3e-4e69-a97f-941873f8a03d/sprint_001/generated_artifacts/: README.md  pyproject.toml  spec.md
runs/ghspec/831f4202-dd3e-4e69-a97f-941873f8a03d/sprint_001/generated_artifacts/specs/001-baes-experiment/: plan.md  tasks.md
runs/ghspec/831f4202-dd3e-4e69-a97f-941873f8a03d/sprint_001/generated_artifacts/specs/001-baes-experiment/src/src/database/: initializer.py
runs/ghspec/831f4202-dd3e-4e69-a97f-941873f8a03d/sprint_001/generated_artifacts/specs/001-baes-experiment/src/tests/api/: test_student.py
runs/ghspec/831f4202-dd3e-4e69-a97f-941873f8a03d/sprint_001/generated_artifacts/src/api/: health.py  main.py  student.py
runs/ghspec/831f4202-dd3e-4e69-a97f-941873f8a03d/sprint_001/generated_artifacts/src/database/: models.py
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/: plan.md  pyproject.toml  spec.md
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/specs/001-baes-experiment/: tasks.md
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/specs/001-baes-experiment/src/: README.md
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/specs/001-baes-experiment/src/src/api/: api.py
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/specs/001-baes-experiment/src/src/app/: main.py
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/specs/001-baes-experiment/src/src/db/: db.py
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/specs/001-baes-experiment/src/tests/: test_api.py  test_models.py
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/src/app/: __init__.py
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/src/errors/: errors.py
runs/ghspec/a8c16701-8f92-49a2-a3c7-e0af4ad91103/sprint_001/generated_artifacts/src/models/: student.py
src/: main.py
(+14278 files in other folders)
