[Assuming content of `pyproject.toml` is below]

```toml
[tool.poetry]
name = "student_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry-core.masonry"
```

[Update the `pyproject.toml` to include necessary dependencies for the project.]

```toml
[tool.poetry]
name = "student_api"
version = "0.1.0"
description = "A simple API for managing students."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"  # Add FastAPI to handle API requests
uvicorn = "^0.18.0"  # ASGI server for running the app
sqlalchemy = "^1.4.27"  # ORM for database interactions
databases = "^0.5.5"  # Async database support for SQLAlchemy
sqlite = "==3.36.0"  # SQLite database for storing student data
pydantic = "^1.9.0"  # Data validation and settings management

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry-core.masonry"
```