```toml
[tool.poetry]
name = "student-entity-management"
version = "0.1.0"
description = "A web application for managing Student entities."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.0"
sqlalchemy = "^2.0.0"
sqlite = "^3.36.0"
pydantic = "^1.10.0"  # For data validation
pytest = "^7.2.0"     # For testing purposes

[tool.poetry.dev-dependencies]
httpx = "^0.24.0"     # For testing HTTP requests to the API

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
```