```toml
[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "A student management application"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"  # FastAPI framework for building RESTful APIs
sqlalchemy = "^2.0.0"  # SQLAlchemy for ORM and database interactions
alembic = "^1.8.0"  # Alembic for database migrations
uvicorn = "^0.22.0"  # ASGI server for running FastAPI applications
sqlite = "^3.36.0"  # SQLite database (local storage)

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Testing framework
httpx = "^0.23.0"  # HTTP client for testing FastAPI
pytest-asyncio = "^0.19.0"  # Support for asyncio in pytest

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
```