# File: pyproject.toml

[tool.poetry]
name = "your_project_name"
version = "1.0.0"
description = "A project description"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4"
pydantic = "^1.9.0"
pytest = "^6.2"
httpx = "^0.21"
# New required dependency for handling SQLite migrations
alembic = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
httpx = "^0.21"
# Add any other development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"