[tool]
description = "A simple student entity management application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry]
name = "student-entity-management"
version = "0.1.0"
description = "A web application for managing student entities"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://example.com"
repository = "https://github.com/yourusername/student-entity-management"
keywords = ["fastapi", "sqlalchemy", "student", "management"]

[tool.poetry.dependencies]
python = "^3.11"  # Specify Python version
fastapi = "^0.95.0"  # FastAPI for building APIs
sqlalchemy = "^2.0.0"  # SQLAlchemy for database management
uvicorn = "^0.22.0"  # ASGI server for running the FastAPI application
pydantic = "^1.10.0"  # Data validation and settings management

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"  # Framework for testing
httpx = "^0.23.0"  # HTTP client for testing APIs

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"